增加（预）记流水功能，数据库表名常量名称修改

--- a/widget/html/accessoryexam/accessoryExamFrame.html
+++ b/widget/html/accessoryexam/accessoryExamFrame.html
@@ -122,17 +122,20 @@ apiready = function() {
     //     source = "history";
     //     setPhysical(history.physical_pointer);
     // }
-    if (history.accessory_exam_pointer == undefined) {
-        var accessory_exam_pointer = {};
-        history.accessory_exam_pointer = accessory_exam_pointer;
-        setStorage("history", history);
+    if (source == "history") {
+        if (history.accessory_exam_pointer == undefined) {
+            var accessory_exam_pointer = {};
+            history.accessory_exam_pointer = accessory_exam_pointer;
+            setStorage("history", history);
+        }
+    } else {
+        if (followup.accessory_exam_pointer == undefined) {
+            var accessory_exam_pointer = {};
+            followup.accessory_exam_pointer = accessory_exam_pointer;
+            setStorage("followup", followup);
+        }
     }
 
-    if (followup.accessory_exam_pointer == undefined) {
-        var accessory_exam_pointer = {};
-        followup.accessory_exam_pointer = accessory_exam_pointer;
-        setStorage("followup", followup);
-    }
 
     // imgStrs = "";
 
