--- a/widget/html/history/historyFrame.html
+++ b/widget/html/history/historyFrame.html
@@ -118,11 +118,22 @@ apiready = function() {
         }
     });
 
+    // api.addEventListener({
+    //     name: 'accessoryExamSaveEvent'
+    // }, function(ret, err) {
+    //     if(ret && ret.value) {
+    //         var current_history = getStorage("history");
+    //         current_history.accessory_exam_pointer.id = ret.value.accessory_exam_id;
+    //         setStorage("history", current_history);
+    //     }
+    // });
+
     api.addEventListener({
         name: 'keyback'
     }, function(ret, err) {
         initLocalHistory();
     });
+
 
     // 新增患者信息，本页面需要知道patient_id
     // api.addEventListener({
@@ -162,6 +173,10 @@ function getFullHistory(history_id) {
             query.include({
                 qid: queryId,
                 column: 'physical_pointer'
+            });
+            query.include({
+                qid: queryId,
+                column: 'accessory_exam_pointer'
             });
             query.whereEqual({
                 qid: queryId,
@@ -328,6 +343,7 @@ function saveHistory() {
                                 record_doctor: history.record_doctor,
                                 patient_pointer: history.patient_pointer.id,
                                 physical_pointer: history.physical_pointer.id,
+                                accessory_exam_pointer: history.accessory_exam_pointer.id,
                                 record_doctor: record_doctor
                             }
                         }, function(ret, err) {
@@ -360,6 +376,7 @@ function saveHistory() {
                         treatment: history.treatment,
                         record_doctor: history.record_doctor,
                         patient_pointer: history.patient_pointer.id,
+                        accessory_exam_pointer: history.accessory_exam_pointer.id,
                         record_doctor: record_doctor
                             // physical_pointer: history.physical_pointer.id
                     }
@@ -393,52 +410,22 @@ function saveHistory() {
 function openWin(type) {
     // history = $api.getStorage("history");
     // alert(JSON.stringify(history));
-    var pageParam = {};
+    var pageParam = {
+        source: "history"
+    };
     var name = "";
     switch (type) {
         case 'patient':
-            // if (api.winName == "list_new_history") {
-            //     name = "new_patient";
-            // }
-            // if (api.winName == "list_modi_history") {
-            //     name = "list_modi_patient";
-            // }
-            // if (api.winName == "full_modi_history") {
-            //     name = "full_modi_patient";
-            // }
             name = api.winName + "_patient";
             page = "patient/patient";
-            // if (api.winName == "dup_history") {
-            //     name = "dup_patient";
-            // }
-            // pageParam = {
-            //     "history_id": history_id,
-            //     "patient_id": patient_id
-            // };
             break;
         case 'physical':
-            // if (api.winName == "list_new_history") {
-            //     name = "new_physical";
-            // }
-            // if (api.winName == "list_modi_history") {
-            //     name = "list_mod_physical";
-            // }
-            // if (api.winName == "full_modi_history") {
-            //     name = "full_modi_physical";
-            // }
             name = api.winName + "_physical";
             page = "physical/physical";
-            // pageParam = {
-            //     "history_id": history_id,
-            //     "physical_id": physical_id
-            // };
             break;
         case 'accessory_exam':
             name = api.winName + "_accessory_exam";
             page = "accessoryexam/accessoryExam";
-            pageParam = {
-                source: "history"
-            };
         default:
             break;
     }
