增加view辅助检查页面

--- a/widget/html/followup/viewFollowUpFrame.html
+++ b/widget/html/followup/viewFollowUpFrame.html
@@ -47,7 +47,7 @@
                     <div class="key">体检信息</div>
                     <div class="value more"><span>&gt;</span></div>
                 </div>
-                <div class="field bottom" tapmode="onFieldClick">
+                <div class="field bottom" tapmode="onFieldClick" onclick="openWin('accessory_exam')">
                     <div class="key">辅助检查</div>
                     <div class="value more"><span>&gt;</span></div>
                 </div>
