--- a/widget/html/history/viewFullHistory.html
+++ b/widget/html/history/viewFullHistory.html
@@ -11,8 +11,10 @@
     <script type="text/javascript" src="../../script/constants.js"></script>
     <script type="text/javascript" src="../../script/util.js"></script>
 </head>
+
 <body>
 </body>
+
 <body class="body-silver">
     <div id="wrap" class="flex-wrap flex-vertical">
         <header id='header' class="header-silver">
@@ -210,6 +212,13 @@
                     <div class="value">
                         <input type="text" id="eyeground" />
                     </div>
+                </div>
+            </div>
+            <div class="groupName">辅助检查</div>
+            <div class="group">
+                <div class="field bottom" tapmode="onFieldClick" onclick="openWin('accessory_exam')">
+                    <div class="key">辅助检查</div>
+                    <div class="value more"><span>&gt;</span></div>
                 </div>
             </div>
         </div>
