--- a/widget/html/accessoryexam/viewAccessoryExam.html
+++ b/widget/html/accessoryexam/viewAccessoryExam.html
@@ -16,18 +16,18 @@
     <div class="flex-wrap flex-vertical">
         <header class="header-silver">
             <a id="left" tapmode="" onclick="window.closeWin();" class="button button-raised button-silver">
-                &lt; 取消
+                &lt; 返回
             </a>
             <div id="middle">
                 <span id="title">辅助检查维护</span>
             </div>
-            <a id="right" tapmode="" onclick="saveAccessoryExam();" class="button button-raised button-blue">
-                确认
+            <a id="right" tapmode="" class="button button-raised button-silver">
+
             </a>
         </header>
         <div id="main" class="flex-con">
             <div class="groupName">干眼</div>
-            <div class="group group-edit">
+            <div class="group">
                 <div class="field">
                     <div class="key">BUT. R</div>
                     <div class="value_with_unit">
@@ -59,43 +59,43 @@
                 <div class="field textarea_field bottom">
                     <div class="field_img">
                         <div class="textarea_key_with_img">前节照相</div>
-                        <div class="img_button" id="qjzx_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                        <div class="img_button" id="qjzx_btn"></div>
                     </div>
                     <div class="textarea_value">
-                        <textarea type="text" id="qjzx" placeholder="请输入内容"></textarea>
+                        <textarea type="text" id="qjzx"></textarea>
                     </div>
                     <div class="accessory_img" id="qjzx_img"></div>
                 </div>
             </div>
             <div class="groupName">白内障屈光</div>
-            <div class="group group-edit">
+            <div class="group">
                 <div class="field textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">角膜曲率</div>
-                        <div class="img_button" id="corneal_curvature_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                        <div class="img_button" id="corneal_curvature_btn"></div>
                     </div>
                     <div class="textarea_value">
-                        <textarea type="text" id="corneal_curvature" placeholder="请输入内容"></textarea>
+                        <textarea type="text" id="corneal_curvature"></textarea>
                     </div>
                     <div class="accessory_img" id="corneal_curvature_img"></div>
                 </div>
                 <div class="field textarea_field">
                     <div class="field_img">
                         <div class="textarea_key_with_img">角膜地形图</div>
-                        <div class="img_button" id="corneal_topography_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                        <div class="img_button" id="corneal_topography_btn"></div>
                     </div>
                     <div class="textarea_value">
-                        <textarea type="text" id="corneal_topography" placeholder="请输入内容"></textarea>
+                        <textarea type="text" id="corneal_topography"></textarea>
                     </div>
                     <div class="accessory_img" id="corneal_topography_img"></div>
                 </div>
                 <div class="field textarea_field bottom">
                     <div class="field_img">
                         <div class="textarea_key_with_img">IOL Master</div>
-                        <div class="img_button" id="iol_master_btn" onclick="addImg(this.id)"><img src="../../image/insertImg.png" /></div>
+                        <div class="img_button" id="iol_master_btn"></div>
                     </div>
                     <div class="textarea_value">
-                        <textarea type="text" id="iol_master" placeholder="请输入内容"></textarea>
+                        <textarea type="text" id="iol_master"></textarea>
                     </div>
                     <div class="accessory_img" id="iol_master_img"></div>
                 </div>
